--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -8,6 +8,6 @@
         "./src/models/*.ts"
     ],
     "cli": {
-        "migrationsDir": "./src/database/migrations"
+        "migrationsDir": "./src/typeorm/migrations"
     }
 }
